packages/webassemblyjs/test/fixtures/conversions/type-errors/convert_u-f64-i64/module.wast
(module (func (result f64) (f64.convert_u/i64 (i32.const 0))))
